--- a/environment.yml
+++ b/environment.yml
@@ -1,88 +1,78 @@
-name: deep-storm
+name: deep-storm-0.2
 channels:
   - conda-forge
-  - anaconda
   - defaults
 dependencies:
-  - blas=1.0
-  - bokeh=0.13.0
-  - ca-certificates=2019.10.16
-  - certifi=2018.8.24
-  - click=7.0
-  - cloudpickle=1.2.2
-  - cycler=0.10.0
-  - cytoolz=0.9.0.1
-  - dask=0.19.2
-  - dask-core=0.19.2
-  - decorator=4.4.1
-  - distributed=1.23.2
-  - freetype=2.8.1
-  - h5py=2.7.1
-  - hdf5=1.10.1
-  - heapdict=1.0.1
-  - icc_rt=2019.0.0
-  - icu=58.2
-  - imageio=2.4.1
-  - intel-openmp=2019.5
-  - jinja2=2.10.3
-  - jpeg=9b
-  - kiwisolver=1.0.1
-  - libpng=1.6.37
-  - libtiff=4.1.0
-  - locket=0.2.0
-  - markupsafe=1.0
-  - matplotlib=2.1.1
-  - mkl=2018.0.3
-  - msgpack-python=0.5.6
-  - networkx=2.4
-  - olefile=0.46
-  - openssl=1.0.2t
-  - packaging=19.2
-  - pandas=0.23.4
-  - partd=1.0.0
-  - pillow=5.1.0
-  - pip=9.0.1
-  - psutil=5.4.7
-  - pyparsing=2.4.2
-  - pyqt=5.6.0
-  - python=3.5.6
-  - python-dateutil=2.8.1
-  - pytz=2019.3
-  - pywavelets=1.0.0
-  - qt=5.6.2
-  - scikit-image=0.13.1
-  - scikit-learn=0.19.1
-  - sip=4.18.1
-  - sortedcontainers=2.0.5
-  - sqlite=3.30.1
-  - tblib=1.5.0
-  - tk=8.6.8
-  - toolz=0.10.0
-  - tornado=5.1.1
-  - vc=14.1
-  - vs2015_runtime=14.16.27012
-  - wincertstore=0.2
-  - xz=5.2.4
-  - yaml=0.1.7
-  - zict=1.0.0
-  - zlib=1.2.11
-  - zstd=1.3.7
+  - ca-certificates=2022.6.15=h5b45459_0
+  - certifi=2022.6.15=py39hcbf5309_0
+  - cudatoolkit=11.2.2=h933977f_10
+  - cudnn=8.1.0.77=h3e0f4f4_0
+  - openssl=1.1.1q=h8ffe710_0
+  - pip=22.1.2=py39haa95532_0
+  - python=3.9.12=h6244533_0
+  - python_abi=3.9=2_cp39
+  - setuptools=61.2.0=py39haa95532_0
+  - sqlite=3.38.5=h2bbff1b_0
+  - tzdata=2022a=hda174b7_0
+  - vc=14.2=h21ff451_1
+  - vs2015_runtime=14.27.29016=h5e58377_2
+  - wheel=0.37.1=pyhd3eb1b0_0
+  - wincertstore=0.2=py39haa95532_2
   - pip:
-    - argparse==1.4.0
-    - bleach==1.5.0
-    - enum34==1.1.6
-    - html5lib==0.9999999
-    - keras==2.1.3
-    - markdown==3.1.1
-    - numpy==1.17.4
-    - pip==19.3.1
-    - protobuf==3.10.0
-    - pyyaml==5.1.2
-    - scipy==1.3.2
-    - setuptools==41.6.0
-    - six==1.13.0
-    - tensorflow-gpu==1.4.0
-    - tensorflow-tensorboard==0.4.0
-    - werkzeug==0.16.0
-    - wheel==0.33.6
-
+    - absl-py==1.2.0
+    - astunparse==1.6.3
+    - cachetools==5.2.0
+    - charset-normalizer==2.1.0
+    - cycler==0.11.0
+    - flatbuffers==1.12
+    - fonttools==4.34.4
+    - gast==0.4.0
+    - google-auth==2.9.1
+    - google-auth-oauthlib==0.4.6
+    - google-pasta==0.2.0
+    - grpcio==1.47.0
+    - h5py==3.7.0
+    - idna==3.3
+    - imageio==2.19.5
+    - importlib-metadata==4.12.0
+    - joblib==1.1.0
+    - keras==2.9.0
+    - keras-preprocessing==1.1.2
+    - kiwisolver==1.4.4
+    - libclang==14.0.1
+    - markdown==3.4.1
+    - matplotlib==3.5.2
+    - networkx==2.8.5
+    - numpy==1.23.1
+    - oauthlib==3.2.0
+    - opt-einsum==3.3.0
+    - packaging==21.3
+    - pillow==9.2.0
+    - protobuf==3.19.4
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
+    - pyparsing==3.0.9
+    - python-dateutil==2.8.2
+    - pywavelets==1.3.0
+    - requests==2.28.1
+    - requests-oauthlib==1.3.1
+    - rsa==4.8
+    - scikit-image==0.19.3
+    - scikit-learn==1.1.1
+    - scipy==1.8.1
+    - six==1.16.0
+    - sklearn==0.0
+    - tensorboard==2.9.1
+    - tensorboard-data-server==0.6.1
+    - tensorboard-plugin-wit==1.8.1
+    - tensorflow==2.9.1
+    - tensorflow-estimator==2.9.0
+    - tensorflow-io-gcs-filesystem==0.26.0
+    - termcolor==1.1.0
+    - threadpoolctl==3.1.0
+    - tifffile==2022.5.4
+    - typing-extensions==4.3.0
+    - urllib3==1.26.10
+    - werkzeug==2.1.2
+    - wrapt==1.14.1
+    - zipp==3.8.1
